src/content/docs/kubernetes-basis/examplefiles/create-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-training
  labels:
    purpose: kubernetes-schulung
