src/content/docs/kubernetes-basis/examplefiles/namespace-adesso.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kw-b2824a-default
  labels:
    purpose: kubernetes-schulung
