src/content/docs/kubernetes-basis/examplefiles/chromium-deployment-res.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chromium
  namespace: kw-b2824a-default
  labels:
    app: chromium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chromium
  template:
    metadata:
      labels:
        app: chromium
    spec:
      containers:
        - name: chromium
          image: lscr.io/linuxserver/chromium:latest
          ports:
            - containerPort: 3000
            - containerPort: 3001
          volumeMounts:
            - name: shm
              mountPath: /dev/shm
            - name: chromium-logs
              mountPath: /config/log
            - name: chromium-logging-script
              mountPath: /usr/bin/wrapped-chromium
              subPath: wrapped-chromium
          resources:                          # NEU
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
        - name: vector
          image: timberio/vector:0.42.0-alpine
          command:
            - vector
            - --config
            - /etc/vector/vector.toml
          volumeMounts:
            - name: chromium-logs
              mountPath: /config/log
            - name: vector-config
              mountPath: /etc/vector
      volumes:
        - name: shm
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
        - name: chromium-logs
          emptyDir: {}
        - name: vector-config
          configMap:
            name: vector-config
        - name: chromium-logging-script
          configMap:
            name: chromium-logging
            defaultMode: 0755
