src/content/docs/kubernetes-basis/examplefiles/chromium-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chromium
  namespace: kw-b2824a-default
spec:
  type: NodePort
  selector:
    app: chromium
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 3000
