src/content/docs/kubernetes-basis/examplefiles/code-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: kw-b2824a-default
spec:
  type: NodePort
  selector:
    app: code-server
  ports:
    - name: http
      protocol: TCP
      port: 8443
      targetPort: 8443
